working on sonar public workflow

--- a/.github/workflows/sonarqube-public-repo.yml
+++ b/.github/workflows/sonarqube-public-repo.yml
@@ -77,7 +77,8 @@ jobs:
         echo "Go private modules set to ${{ inputs.go-private-modules }}"    
 
   SonarQube:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-4-cores
+# ubuntu-latest
     permissions: # Must change the job token permissions to use JWT auth
       id-token: write
       contents: read
@@ -98,7 +99,8 @@ jobs:
     # Use @{ver} to select the version of the action. "latest" tag is also available for latest version.
     - name: Prepare Secrets and Login into Azure
       id: get-aad-secret
-      uses: 'prgs-community/githubactions-reusableworkflow-sonarqube/.github/actions/azure-login@0.8'
+# uses: 'prgs-community/githubactions-reusableworkflow-sonarqube/.github/actions/azure-login@0.8'
+      uses: '.github/actions/azure-login'
       with:
         akeyless-access-id: '${{ secrets.AKEYLESS_JWT_ID }}'
 
@@ -106,7 +108,7 @@ jobs:
     #   uses: prgs-community/githubactions-reusableworkflow-sonarqube/.github/actions/update-firewall-rule@0.8
     #   with:
     #     action-to-execute: add
-    
+
 #    uses: 'prgs-community/githubactions-reusableworkflow-sonarqube/.github/actions/update-firewall-rule@0.81'
   
     # - name: Remove Storage Firewall Rule
