--- a/.github/workflows/sonarqube-public-repo.yml
+++ b/.github/workflows/sonarqube-public-repo.yml
@@ -100,7 +100,7 @@ jobs:
     - name: Prepare Secrets and Login into Azure
       id: get-aad-secret
 # uses: 'prgs-community/githubactions-reusableworkflow-sonarqube/.github/actions/azure-login@0.8'
-      uses: 'chef/common-github-actions/.github/actions/azure-login'
+      uses: 'chef/common-github-actions/.github/actions/azure-login@main'
       with:
         akeyless-access-id: '${{ secrets.AKEYLESS_JWT_ID }}'
 
