--- a/.github/workflows/sonarqube-internal-repo.yml
+++ b/.github/workflows/sonarqube-internal-repo.yml
@@ -78,6 +78,9 @@ jobs:
       
   SonarQube:
     runs-on: ubuntu-latest-4-cores
+    permissions: 
+      id-token: write
+      contents: read
     steps:
     - name: checkout
       if: ${{ inputs.perform-build == true && inputs.visibility == 'internal' }}
