--- a/.github/workflows/stubs/ci-main-pull-request-stub.yml
+++ b/.github/workflows/stubs/ci-main-pull-request-stub.yml
@@ -13,6 +13,9 @@ on:
 
   workflow_dispatch:
 
+permissions:
+  contents: read
+  
 env:
   STUB_VERSION: "1.0.0" 
   
@@ -28,6 +31,10 @@ jobs:
   call-ci-main-pr-check-pipeline:
     uses: chef/common-github-actions/.github/workflows/ci-main-pull-request.yml@main
     secrets: inherit
+    permissions: 
+      id-token: write
+      contents: read
+    
     with:   
       visibility: ${{ github.event.repository.visibility }} 
       
