--- a/.github/workflows/cd-main-version-bumper.yml
+++ b/.github/workflows/cd-main-version-bumper.yml
@@ -94,7 +94,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 'ruby'
-          bundler-cache: true
+          # bundler-cache: true
       
       - name: Install bump gem
         run: gem install bump
