--- a/workflow-supporting-files/sonar-templates/RUBY-sonar-project.properties
+++ b/workflow-supporting-files/sonar-templates/RUBY-sonar-project.properties
@@ -21,7 +21,8 @@ sonar.sources=lib
 # sonar.exclusions=**/*_test.go, **/*.js, **/*.sql, **/*.yml, **/*.yaml; may exclude **/vendor/** for Ruby
 
 # Unit tests
-sonar.tests=spec/**/*.rb 
+sonar.tests=spec
+# was spec/**/*.rb 
 # sonar.test.inclusions=**/*_test.go **/*Test.java
 # Coverage report
 sonar.ruby.coverage.framework=RSpec
