--- a/.github/workflows/stubs/ci-main-pull-request-stub.yml
+++ b/.github/workflows/stubs/ci-main-pull-request-stub.yml
@@ -17,10 +17,10 @@ permissions:
   contents: read
   
 env:
-  STUB_VERSION: "1.0.0" 
+  STUB_VERSION: "1.0.1" 
   
 jobs: 
-  echo_inputs:
+  echo_version:
     name: 'Echo stub version'
     runs-on: ubuntu-latest
     steps:
@@ -36,46 +36,56 @@ jobs:
       contents: read
     
     with:   
-      visibility: ${{ github.event.repository.visibility }} 
+      visibility: ${{ github.event.repository.visibility }}   #  private, public, or internal
+      # go-private-modules: GOPRIVATE for Go private modules, default is 'github.com/progress-platform-services/*
       
+      # complexity-checks
       perform-complexity-checks: true
       # scc-output-filename: 'scc-output.txt'
-      perform-trufflehog-scan: true
-      # perform-srcclr-scan: false
-      # perform-veracode-sca-scan: false
-      perform-blackduck-sca-scan: false
-      
-      build: true
-      language: 'Ruby'  
-      unit-tests: false
+      perform-language-linting: true    # Perform language-specific linting and pre-compilation checks
 
-      # go-private-modules:
+      # trufflehog secret scanning
+      perform-trufflehog-scan: true
       
-      perform-sonarqube-sca-scan: true
+      # BlackDuck SAST (Polaris) and SCA scans
+      # requires secrets POLARIS_SERVER_URL and POLARIS_ACCESS_TOKEN
+      perform-blackduck-polaris: true
+      polaris-application-name: 'Chef-Chef360'  # one of these: Chef-Agents, Chef-Automate, Chef-Chef360, Chef-Habitat, Chef-Infrastructure-Server, Chef-Shared-Services
+      polaris-project-name: ${{ polaris_application_name }}-${{ github.event.repository.name }}  # typically the application name, followed by - and the repository name, for example Chef-Chef360-chef-vault'
+      perform-blackduck-sca-scan: true
+     
+      # perform application build and unit testing, will use custom repository properties when implemented for chef-primary-application, chef-build-profile, and chef-build-language
+      build: true
+      language: 'Ruby'    # Go, Ruby, Rust  
+      unit-tests: false
+ 
+      # perform SonarQube scan, withor wihout unit test coverage data
+      # requires secrets SONAR_TOKEN and SONAR_HOST_URL (progress.sonar.com)
+      perform-sonarqube-scan: true
       perform-sonar-build: true
       # build-profile: 'default' 
       report-unit-test-coverage: true
 
+      # report to central developer dashboard
       report-to-atlassian-dashboard: true
-      quality-product-name: 'Chef360'
+      quality-product-name: 'Chef-360'   # product name for quality reporting, like Chef360, Courier, Inspec
       # quality-sonar-app-name: 'YourSonarAppName'
-      # quality-testing-type: 'Integration'
+      # quality-testing-type: 'Integration' like Unit, Integration, e2e, api, Performance, Security
       # quality-service-name: 'YourServiceOrRepoName'
-      # quality-junit-report: 
+      # quality-junit-report: 'path/to/junit/report''
 
-      # perform-blackduck-coverity: false
-      # perform-blackduck-polaris: false
+      # perform native and Habitat packaging, publish to package repositories
+      package-binaries: false     # Package binaries (e.g., RPM, DEB, MSI, dpkg + signing + SHA)
+      habitat-build: false        # Create Habitat packages
+      publish-packages: false     # Publish packages (e.g., container from Dockerfile to ECR, go-releaser binary to releases page, omnibus to artifactory, gems, choco, homebrew, other app stores)
 
-      package-binaries: false
-      habitat-build: false
-      publish-packages: false
-
+      # generate and export Software Bill of Materials (SBOM) in various formats
       generate-sbom: true
-      export-github-sbom: true
-      generate-blackduck-polaris-sbom: true
-      generate-msft-sbom: true
-      license_scout: true
+      export-github-sbom: true      # SPDX JSON artifact on job instance  
+      generate-blackduck-sbom: true   # requires BlackDuck secrets and inputs as above for SAST scanning
+      generate-msft-sbom: false
+      license_scout: false      # Run license scout for license compliance (uses .license_scout.yml)
       
       # udf1: 'default' # user defined flag 1
       # udf2: 'default' # user defined flag 2 
-      # udf3: 'default' # user defined flag 3
+      # udf3: 'default' # user defined flag 3     
