--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -309,12 +309,14 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 # generate gemfile.lock (TODO: move this below to OWASP)
       - run: bundle install
-      - name: 'Bundler Audit'
-        if: ${{ inputs.language == 'Ruby' && inputs.perform-complexity-checks == true }}
-        uses: andrewmcodes/bundler-audit-action@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: 'Bundler Audit'
+      #   if: ${{ inputs.language == 'Ruby' && inputs.perform-complexity-checks == true }}
+      #   uses: andrewmcodes/bundler-audit-action@main
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # TODO: get with Marc/Prajakta on this sequence for Ruby uses: chef/common-github-actions/.github/workflows/rubocop.yml@main
+        # TODO: this is also not certified, craete a copy in .github/actions - https://github.com/marketplace/actions/bundler-audit-action
+        # Bundler Audit Action is not certified by GitHub. It is provided by a third-party and is governed by separate terms of service, privacy policy, and support documentation.
 
   go-language-checks:
     name: 'Go-specific pre-compilation steps and linting'  
@@ -341,21 +343,29 @@ jobs:
     runs-on: ubuntu-latest
     needs: checkout
     steps:
-      - name: 'Language-agnostic pre-compilation steps (OWASP dependency check)'  
-        uses: dependency-check/Dependency-Check_Action@main
-        with:
-          project: $REPO_NAME
-          path: '.'
-          format: 'JSON'
-  # out: 'reports' # this is the default, no need to specify unless you wish to override it
-          args: >
-            --enableRetired
-            --prettyPrint
-      - name: Upload Test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: OWASP dependency check report
-          path: ${{github.workspace}}/reports
+      - name: Echo placeholder
+        run: echo "placeholder"
+  #     - name: 'Language-agnostic pre-compilation steps (OWASP dependency check)'  
+  #       uses: dependency-check/Dependency-Check_Action@main
+  # TODO: Dependency Check is not certified by GitHub. It is provided by a third-party and is governed by separate terms of service, privacy policy, and support documentation
+  # create a copy in common-github-actions/.github/actions/owasp-dependency-check.yml
+      # - name: 'OWASP dependency check'
+      #   uses: dependency-check/Dependency-Check_Action@v4.0.0
+      #   with:
+      #     project: ${{ github.event.repository.name }} 
+  #       with:
+  #         project: $REPO_NAME
+  #         path: '.'
+  #         format: 'JSON'
+  # # out: 'reports' # this is the default, no need to specify unless you wish to override it
+  #         args: >
+  #           --enableRetired
+  #           --prettyPrint
+      # - name: Upload Test results
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: OWASP dependency check report
+      #     path: ${{github.workspace}}/reports
     # TODO: add flag --failOnCVSS 7
     # TODO: integrate with SonarQube
     # TODO: correct artifact upload names like Sonu's in sbom.yml
@@ -584,12 +594,12 @@ jobs:
           bundler-cache: true
       - name: run specs
         run: bundle exec rake spec --trace
-      - name: Simplecov Report
-        uses: aki77/simplecov-report-action@v1  # TODO: archived action - replace with another simplecov 
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          failedThreshold: 90
-          resultPath: coverage/.last_run.json
+      # - name: Simplecov Report
+      #   uses: aki77/simplecov-report-action@v1  # TODO: archived action - replace with another simplecov 
+      #   with:
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     failedThreshold: 90
+      #     resultPath: coverage/.last_run.json
 
   #   runs-on: ubuntu-latest
   #   needs: ci-package-binary
