--- a/.github/workflows/scc.yml
+++ b/.github/workflows/scc.yml
@@ -24,7 +24,7 @@ jobs:
       #   uses: Adapt-API/scc-docker-action@master
       # https://github.com/Adapt-API/scc-docker-action 
       # TODO: no longer in marketplace
-      
+
       #   with:
       #     args: -o ${{ inputs.outputfilename }} -f json --by-file --sort lines,code,comments,blank  
       #     # flags like -i js,go,html,css,rb at https://github.com/boyter/scc?tab=readme-ov-file#usage
@@ -32,6 +32,7 @@ jobs:
       - name: Install scc CLI
         run: |
           go install github.com/boyter/scc/v3@latest
+          export PATH="$PATH:$(go env GOPATH)/bin"
           scc -o ${{ inputs.outputfilename }} -f json --by-file --sort lines,code,comments,blank
       - name: Upload artifact
         uses: actions/upload-artifact@v4
